--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,9 @@ dependencies = [
     "seaborn (>=0.13.2,<0.14.0)",
     "catboost (>=1.2.8,<2.0.0)",
     "tqdm (>=4.67.1,<5.0.0)",
-    "ipykernel (>=6.29.5,<7.0.0)"
+    "ipykernel (>=6.29.5,<7.0.0)",
+    "holidays (>=0.76,<0.77)",
+    "statsmodels (>=0.14.5,<0.15.0)"
 ]
 
 
