--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "holidays (>=0.76,<0.77)",
     "statsmodels (>=0.14.5,<0.15.0)"
 ]
+packages = [{ include = "forecast_sales", from = "src" }]
 
 
 [build-system]
